test_suite5/ALAN/test_suite/alan-2022-examples/failing/006150_mutation.alan
source L begin leave 60 > get I 38 end
